# contract

./: .copier-answers.yml  .pre-commit-config.yaml  .travis.yml  README.md  cgename.sh  oca_dependencies.txt  test-requirements.txt
account_analytic_analysis_recurring/: __openerp__.py  account_analytic_analysis_recurring.py
account_invoice_refund_link/: README.rst  __manifest__.py
agreement/: .#__manifest__.py  README.md  README.rst  __manifest__.py
agreement_account/: README.rst  __manifest__.py
agreement_dynamic/: README.rst  __init__.py  __manifest__.py
agreement_employee_contract/: README.rst  __init__.py
agreement_fleet/: README.rst  __manifest__.py
agreement_fsm/: README.rst  __manifest__.py
agreement_helpdesk_mgmt/: README.rst  __manifest__.py
agreement_legal/: README.rst  __init__.py  __manifest__.py
agreement_legal_contract/: __manifest__.py
agreement_legal_demo/: README.rst  __manifest__.py
agreement_legal_exception/: __manifest__.py
agreement_legal_sale/: README.rst  __manifest__.py
agreement_legal_sale_fieldservice/: README.rst  __manifest__.py
agreement_maintenance/: README.rst  __init__.py  __manifest__.py
agreement_mrp/: README.rst  __init__.py  __manifest__.py
agreement_partner_preference_base/: README.rst  __manifest__.py
agreement_project/: README.rst  __manifest__.py  test-requirements.txt
agreement_rappel/: __manifest__.py
agreement_rebate/: README.rst  __manifest__.py
agreement_rebate_partner_company_group/: README.rst  __init__.py  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+2759 files in other folders)
