[project]
name = "odoo-addons-oca-contract"
version = "17.0.20240828.0"
dependencies = [
    "odoo-addon-contract>=17.0dev,<17.1dev",
    "odoo-addon-contract_price_revision>=17.0dev,<17.1dev",
    "odoo-addon-contract_sale>=17.0dev,<17.1dev",
    "odoo-addon-contract_sale_invoicing>=17.0dev,<17.1dev",
    "odoo-addon-contract_variable_qty_timesheet>=17.0dev,<17.1dev",
    "odoo-addon-contract_variable_quantity>=17.0dev,<17.1dev",
    "odoo-addon-product_contract>=17.0dev,<17.1dev",
    "odoo-addon-subscription_oca>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
